[project]
name = "iikanji"
version = "3.0.0"
description = "いいかんじ家計簿 Python クライアント"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "cryptography>=42",
    "argon2-cffi>=23",
    "keyring>=24",
    "Pillow>=10",
    "pyhpke>=0.6",
]

[project.scripts]
iikanji = "iikanji.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iikanji"]
